Project

General

Profile

Actions

Bug #48647

closed

librbd::image::CreateRequest: validate_features: cannot use internally controlled features

Added by Henri Wahl over 3 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
nautilus,octopus
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Hi there,

due to https://github.com/ceph/ceph/commit/20ff4fdaea4ab0090c75fee427033c2c662a93d0#r45144843 I post the bug here.

I run Ceph Nautilus 14.2.15 on CentOS 7.9.2009 as storage for OpenNebula 5.8.5.

When I want to copy a rbd disk in OpenNebula the copying fails with the following error:

Thu Dec 17 15:38:11 2020 [Z0][TM][I]: rbd --id libvirt  copy $RBD_DST one/one-1031" failed: 2020-12-17 15:38:11.747 7f32f661dc80 -1 librbd::image::CreateRequest: validate_features: cannot use internally controlled features
Thu Dec 17 15:38:11 2020 [Z0][TM][I]: Image copy: 0% complete...failed.
Thu Dec 17 15:38:11 2020 [Z0][TM][I]: 2020-12-17 15:38:11.747 7f32f661dc80 -1 librbd: header creation failed
Thu Dec 17 15:38:11 2020 [Z0][TM][I]: rbd: copy failed: (22) Invalid argument
Thu Dec 17 15:38:11 2020 [Z0][TM][E]: Error cloning one/one-1005-2565-1 to one/one-1031 in ceph0101
Thu Dec 17 15:38:11 2020 [Z0][TM][E]: Error executing image transfer script: Error cloning one/one-1005-2565-1 to one/one-1031 in ceph0101

The command OpenNebula was calling basically is

rbd --id libvirt copy one/one-1005-2565-1 one/one-1031

Running rbd info one/one-1005-2565-1 gets this result:

rbd image 'one-1005-2565-1':
    size 50 GiB in 12800 objects
    order 22 (4 MiB objects)
    snapshot_count: 0
    id: bf4c884105e014
    block_name_prefix: rbd_data.bf4c884105e014
    format: 2
    features: layering, exclusive-lock, object-map, fast-diff, deep-flatten, operations
    op_features: clone-child
    flags: 
    create_timestamp: Wed Dec 16 15:29:00 2020
    access_timestamp: Wed Dec 16 16:23:10 2020
    modify_timestamp: Wed Dec 16 16:23:19 2020
    parent: one/one-1005@snap
    overlap: 50 GiB

Is there any debugging information I could deliver?

Thanks for any hint and best regards
Henri


Related issues 2 (0 open2 closed)

Copied to rbd - Backport #48691: nautilus: librbd::image::CreateRequest: validate_features: cannot use internally controlled featuresResolvedNathan CutlerActions
Copied to rbd - Backport #48692: octopus: librbd::image::CreateRequest: validate_features: cannot use internally controlled featuresResolvedNathan CutlerActions
Actions #1

Updated by Jason Dillaman over 3 years ago

  • Backport set to nautilus,octopus
Actions #2

Updated by Jason Dillaman over 3 years ago

  • Status changed from New to In Progress
  • Assignee set to Jason Dillaman
Actions #3

Updated by Jason Dillaman over 3 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 38653
Actions #4

Updated by Mykola Golub over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Backport Bot over 3 years ago

  • Copied to Backport #48691: nautilus: librbd::image::CreateRequest: validate_features: cannot use internally controlled features added
Actions #6

Updated by Backport Bot over 3 years ago

  • Copied to Backport #48692: octopus: librbd::image::CreateRequest: validate_features: cannot use internally controlled features added
Actions #7

Updated by Nathan Cutler over 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF